--- a/index.html
+++ b/index.html
@@ -17,48 +17,46 @@
     <title>mapty // Map your workouts</title>
   </head>
   <body>
-
     <div class="sidebar">
-        <img src="logo.png" alt="Logo" class="logo" />
-  
-        <ul class="workouts">
-          <form class="form hidden">
-            <div class="form__row">
-              <label class="form__label">Type</label>
-              <select class="form__input form__input--type">
-                <option value="running">Running</option>
-                <option value="cycling">Cycling</option>
-              </select>
-            </div>
-            <div class="form__row">
-              <label class="form__label">Distance</label>
-              <input class="form__input form__input--distance" placeholder="km" />
-            </div>
-            <div class="form__row">
-              <label class="form__label">Duration</label>
-              <input
-                class="form__input form__input--duration"
-                placeholder="min"
-              />
-            </div>
-            <div class="form__row">
-              <label class="form__label">Cadence</label>
-              <input
-                class="form__input form__input--cadence"
-                placeholder="step/min"
-              />
-            </div>
-            <div class="form__row form__row--hidden">
-              <label class="form__label">Elev Gain</label>
-              <input
-                class="form__input form__input--elevation"
-                placeholder="meters"
-              />
-            </div>
-            <button class="form__btn">OK</button>
-          </form>
+      <img src="logo.png" alt="Logo" class="logo" />
 
-          
+      <ul class="workouts">
+        <form class="form hidden">
+          <div class="form__row">
+            <label class="form__label">Type</label>
+            <select class="form__input form__input--type">
+              <option value="running">Running</option>
+              <option value="cycling">Cycling</option>
+            </select>
+          </div>
+          <div class="form__row">
+            <label class="form__label">Distance</label>
+            <input class="form__input form__input--distance" placeholder="km" />
+          </div>
+          <div class="form__row">
+            <label class="form__label">Duration</label>
+            <input
+              class="form__input form__input--duration"
+              placeholder="min"
+            />
+          </div>
+          <div class="form__row">
+            <label class="form__label">Cadence</label>
+            <input
+              class="form__input form__input--cadence"
+              placeholder="step/min"
+            />
+          </div>
+          <div class="form__row form__row--hidden">
+            <label class="form__label">Elev Gain</label>
+            <input
+              class="form__input form__input--elevation"
+              placeholder="meters"
+            />
+          </div>
+          <button class="form__btn">OK</button>
+        </form>
+
         <!-- <li class="workout workout--running" data-id="1234567890">
           <h2 class="workout__title">Running on April 14</h2>
           <div class="workout__details">
@@ -107,5 +105,19 @@
           </div>
         </li> -->
       </ul>
+
+      <p class="copyright">
+        &copy; Copyright by
+        <a
+          class="twitter-link"
+          target="_blank"
+          href="https://twitter.com/jonasschmedtman"
+          >Donnie Alimov</a
+        >. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga velit
+        obcaecati maxime sed nobis pariatur.
+      </p>
+    </div>
+
+    <div id="map"></div>
   </body>
 </html>
